# PillowTalk

./: .gitignore  BluetoothLaunch.sh  DictionaryCommands.txt  MotorControl.py  PillowCommands.txt  README.md  Speech2Text.py  TextParser.py  bluetooth_service.py  busControlReadMe.txt  classTest.py  gpio_control.py  jasperVoice.py  manage.py  motorControl.py  motorTest.py  pyproject.toml  relayControl.py  relayControl2.py  rfcomm-server-sdp.py  settings.json  settings.json.bk  sphinxVoice.py  test.py  urls.py  voiceControl.py  webServer2.py  web_server.py
OfflineS2T/config/: default.ini
OfflineS2T/dict/: dict.json
OfflineS2T/dict/Cushion/: 225343c3-f52c-4a3b-9034-7b22b8d483dc.raw  23050ab4-2b66-4b07-ba17-b369fa694f61.raw  527e87b0-04b8-4203-8bd7-a5b70b4f71d9.raw  5546d87a-b88f-49c1-badb-847ff7f8ea03.raw  61055595-b53f-447a-b849-bd70e8d0f5f8.raw  666773a6-ab54-45d9-8f76-e053cda3b422.raw  78d503e5-1be1-4dc6-ae6b-f436d21ab628.raw  (+15 more)
OfflineS2T/sopare/: analyze.py
PillowTalk/: asgi.py  settings.py  urls.py  wsgi.py
docs/: DictionaryCommands.txt  Pillow Board connections.txt
mainsite/: views.py
mainsite/templates/: index.html
pillowtalk/: AudioControl.py  BluetoothService.py  DictionaryCommands.txt  MotorControl.py  ParserTesting.py  Speech2Text.py  TextParser.py  WebServer.py  WebServer2.py
pillowtalk/UnitTesting/: ParserTesting.py
pillowtalk/static/: index.css  index.js
pillowtalk/templates/: index.html
src/: ClassTest.py  Speech2Text.py  WebServer.py
templates/: index.css  index.html  index.js  server_connection_test.html
(+23 files in other folders)
